always show scrollbar in popup to avoid jumping window

--- a/less/ui-components/popupwindow.less
+++ b/less/ui-components/popupwindow.less
@@ -56,7 +56,7 @@
 
 		background: rgba(0, 0, 0, 0.2);
 
-		overflow-y: auto;
+		overflow-y: scroll;
 
 		z-index: 1600;
 
